ingress/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: dashboard-server
spec:
  type: ExternalName
  externalName: dashboard-server.me.svc.cluster.local
