ingress/ingress-rabbit-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dt-ingress-rabbit
  namespace: me
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app/rabbit
            pathType: Prefix
            backend:
              service:
                name: dashboard-server
                port:
                  name: rabbit
          - path: /app/rabbit/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dashboard-server
                port:
                  name: rabbit
